--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <title>Home Page</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/styles.css">
+  <script src="./js/app.js"></script>
 </head>
 <body>
   <header>
@@ -22,6 +23,9 @@
     <div id="canvas-div">
       <canvas id="my-image" width="350px" height="350px"></canvas>
     </div>
+  </section>
+  <section id="story-Display">
+
   </section>
 
   <section id="table-section">
