added more JS revisions

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <canvas id="my-image" width="350px" height="350px"></canvas>
     </div>
   </section>
-  <section id="story-Display">
+  <section id="storyDisplay">
 
   </section>
 
   <section id="table-section">
-    <h2>Write your own Story</h2>
+    <h2 id = "wyos">Write your own Story</h2>
     <table id="bookshelf"></table>
   </section>  
 
