--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,19 @@
 
         <label id="prof">Create a Writer's Profile</label><br>
         <label class="newUser">Enter Name:</label>
-        <input class="newUser type="text" name="userNew">
+        <input class="newUser type="text" name="userName">
+        <label class="newUser">Enter Age:</label>
+        <input class="newUser type="text" name="userAge">
+        <select name="pronoun" id="pronoun">
+          <option value="default">Select a pronoun</option>
+          <option value="his">he/him</option>
+          <option value="she">she/her</option>
+          <option value="they">they/them</option>
+          <option value="name">Use my Name!</option>
+        </select>
+
+
+
         <li class="button">
           <button id="submit" type="submit">Submit</button>
         </li>
@@ -66,5 +78,6 @@
       <button id="subscribe-btn">Subscribe</button>
     </div>
   </footer>
+  <script src="js/profile.js"></script>
 </body>
 </html>
