--- a/profile.html
+++ b/profile.html
@@ -52,9 +52,9 @@
   </section>
 
   <article id="genre">
-<img class="genreicon" pic src="https://via.placeholder.com/200x200" alt="FANTASY">
-<img class="genreicon"  src="https://via.placeholder.com/200x200" alt="SCI-FI">
-<img class="genreicon" src="https://via.placeholder.com/200x200" alt="HORROR">
+<img id="fantasy" class="genreicon" pic src="https://via.placeholder.com/200x200" alt="FANTASY">
+<img id="sci-fi" class="genreicon"  src="https://via.placeholder.com/200x200" alt="SCI-FI">
+<img id="horror" class="genreicon" src="https://via.placeholder.com/200x200" alt="HORROR">
 <!-- There will be more genres we are striving for functionality before choices. -->
   </article>
 
