--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Home Page</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css">
-  <script src="./js/app.js"></script>
+  
 </head>
 <body>
   <header>
@@ -53,6 +53,7 @@
       <button id="subscribe-btn">Subscribe</button>
     </div>
   </footer>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
