removed unnecessary text

--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,7 @@
   </section>
 
   <article id="genre">
-<img id="FANTASY" class="genreicon" pic src="img/FANTASY.jpg" alt="FANTASY">
+<img id="FANTASY" class="genreicon" src="img/FANTASY.jpg" alt="FANTASY">
 <img id="SCI-FI" class="genreicon"  src="img/SCI-FI.jpg" alt="SCI-FI">
 <img id="HORROR" class="genreicon" src="img/HORROR.jpg" alt="HORROR">
 <!-- There will be more genres we are striving for functionality before choices. -->
