--- a/profile.html
+++ b/profile.html
@@ -52,9 +52,9 @@
   </section>
 
   <article id="genre">
-<img id="FANTASY" class="genreicon" src="img/FANTASY.jpg" alt="FANTASY">
-<img id="SCI-FI" class="genreicon"  src="img/SCI-FI.jpg" alt="SCI-FI">
-<img id="HORROR" class="genreicon" src="img/HORROR.jpg" alt="HORROR">
+<img id="FANTASY" class="genreicon" src="img/FANTASY.jpg" alt="FANTASY" width="200px" height="200px">
+<img id="SCI-FI" class="genreicon"  src="img/SCI-FI.jpg" alt="SCI-FI" width="200px" height="200px">
+<img id="HORROR" class="genreicon" src="img/HORROR.jpg" alt="HORROR" width="200px" height="200px">
 <!-- There will be more genres we are striving for functionality before choices. -->
   </article>
 
