centered img-container,added css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
 
-  <section>
+  <section class="img-container">
     <div id="canvas-div">
       <canvas id="my-image" width="350px" height="350px"></canvas>
     </div>
