--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <title>Home Page</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css">
   
@@ -9,7 +12,7 @@
 <body>
   <header>
     <div id="logo">
-      <img src="https://place-hold.it/50x50/ddd">
+      <img src="img/storeyteller.jpg" width="150px" height="100px">
     </div>
     <h1>Storybook Generator</h1>
     <nav>
