--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
       <p>Nerissa Leynes</p>
     </div>
     <div id="subscribe-div">
-      <p id="filler-text">Please Don't forget to Subscribe!</p>
-      <button id="subscribe-btn">Subscribe</button>
+      <p id="filler-text">Subscribe Now!</p>
+      <input id="email-input" placeholder='Enter Your Email' />
+      <button id="email-btn">Sign-Up</button>
     </div>
   </footer>
   <script src="js/app.js"></script>
