--- a/profile.html
+++ b/profile.html
@@ -78,6 +78,6 @@
       <button id="subscribe-btn">Subscribe</button>
     </div>
   </footer>
-  <script src="js/profile.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
