edit header index

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header>
     <div id="logo">
       <img src="img/storeyteller.jpg" width="150px" height="100px">
+      <h1 class="styling">Story Not Story</h1>
     </div>
-    <h1>Storybook Generator</h1>
     <nav>
       <a href="">Home</a>
       <a href="">Story</a>
@@ -41,7 +41,7 @@
       <p> Contact Us for More Updates</p>
     </div>
     <div id="authors">
-      <h2> Project &copy</h2>
+      <h2 class="styling"> Project &copy</h2>
       <div class="circle"></div>
       <p>Nicholas Seidel</p>
       <div class="circle"></div>
