added divs on labels form

--- a/profile.html
+++ b/profile.html
@@ -25,17 +25,24 @@
       <fieldset>
 
         <label id="prof">Create a Writer's Profile</label><br>
-        <label class="newUser">Enter Name:</label>
-        <input class="newUser type="text" name="userName">
-        <label class="newUser">Enter Age:</label>
-        <input class="newUser type="text" name="userAge">
-        <select name="pronoun" id="pronoun">
-          <option value="default">Select a pronoun</option>
-          <option value="his">he/him</option>
-          <option value="she">she/her</option>
-          <option value="they">they/them</option>
-          <option value="name">Use my Name!</option>
-        </select>
+        <div class="label-div">
+          <label class="newUser">Enter Name:</label>
+          <input class="newUser type="text" name="userName">
+        </div>
+        <div class="label-div">
+          <label class="newUser">Enter Age:</label>
+          <input class="newUser type="text" name="userAge">
+        </div>
+        <div class="label-div">
+          <select name="pronoun" id="pronoun">
+            <option value="default">Select a pronoun</option>
+            <option value="his">he/him</option>
+            <option value="she">she/her</option>
+            <option value="they">they/them</option>
+            <option value="name">Use my Name!</option>
+          </select>
+        </div>
+        
 
 
 
