added styling on forms

--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
           <input class="newUser type="text" name="userName">
         </div>
         <div class="label-div">
-          <label class="newUser">Enter Age:</label>
+          <label class="newUser">Enter Age: &nbsp&nbsp</label>
           <input class="newUser type="text" name="userAge">
         </div>
         <div class="label-div">
@@ -41,14 +41,11 @@
             <option value="they">they/them</option>
             <option value="name">Use my Name!</option>
           </select>
-        </div>
-        
+        </div>    
 
-
-
-        <li class="button">
+        <div class="button">
           <button id="submit" type="submit">Submit</button>
-        </li>
+        </div>
       </fieldset>
 
     </form>
