changed horror pic

--- a/profile.html
+++ b/profile.html
@@ -58,7 +58,7 @@
   <article id="genre">
 <img id="FANTASY" class="genreicon" src="img/FANTASY.jpg" alt="FANTASY" width="200px" height="200px">
 <img id="SCI-FI" class="genreicon"  src="img/SCI-FI.jpg" alt="SCI-FI" width="200px" height="200px">
-<img id="HORROR" class="genreicon" src="img/HORROR.jpg" alt="HORROR" width="200px" height="200px">
+<img id="HORROR" class="genreicon" src="img/4.jpg" alt="HORROR" width="200px" height="200px">
 <!-- There will be more genres we are striving for functionality before choices. -->
   </article>
 
