--- a/profile.html
+++ b/profile.html
@@ -26,9 +26,9 @@
 
         <label id="prof">Create a Writer's Profile</label><br>
         <label class="newUser">Enter Name:</label>
-        <input class="newUser type="text" name="userName">
+        <input class="newUser" type="text" name="userName">
         <label class="newUser">Enter Age:</label>
-        <input class="newUser type="text" name="userAge">
+        <input class="newUser" type="text" name="userAge">
         <select name="pronoun" id="pronoun">
           <option value="default">Select a pronoun</option>
           <option value="his">he/him</option>
