--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- STORY FORM -->
   <div id = "selbar">
-    <form id="selector">
+    <form id="storyForm">
       <fieldset>
 
         <div id="storyNameForm">
@@ -56,16 +56,16 @@
         <input class="adj1" type="text" name="adj1">
       </div>
 
-      <div id="storyProper1">
+      <div id="storyName1">
         <label id="propDiv1">Who's someone you idolize?</label><br>
-        <label class="prop1">Name of Person:</label>
-        <input class="prop1" type="text" name="prop1">
+        <label class="name1">Name of Person:</label>
+        <input class="name1" type="text" name="name1">
       </div>
 
       </div>
 
       <div>
-          <select name="color" id="colorpicker">
+          <select name="color" id="color">
           <option value="default">Select a Color</option>
           <option value="red">Red</option>
           <option value="blue">Green</option>
@@ -76,11 +76,12 @@
         </select>
 
         <li class="button">
-          <button id="storyPara" type="submit">Submit</button>
+          <button id="=storysubmit" type="submit">Submit</button>
         </li>
-
+      
 
       </fieldset>
+    </form>
   </div>
   </section>  
 
