--- a/profile.html
+++ b/profile.html
@@ -28,11 +28,11 @@
 
         <div class="label-div">
           <label class="newUser">Enter Name:</label>
-          <input class="newUser type="text" name="userName">
+          <input class="newUser" type="text" name="userName">
         </div>
         <div class="label-div">
           <label class="newUser">Enter Age: &nbsp&nbsp</label>
-          <input class="newUser type="text" name="userAge">
+          <input class="newUser" type="text" name="userAge">
         </div>
         <div class="label-div">
           <select name="pronoun" id="pronoun">
