local storage for bookshelf created

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div id="logo">
       <img src="img/storeyteller.jpg" width="150px" height="100px">
-      <h1 class="styling">Story Not Story</h1>
+      <h1 class="styling">"Story Not Story"</h1>
     </div>
     <nav>
       <a href="">Home</a>
@@ -112,6 +112,7 @@
   <script src="js/app.js"></script>
   <script src="js/bookshelf.js"></script>
   <script src="js/ls.js"></script>
+
 </body>
 
 </html>
