--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css">
+
+  <script src="js/app.js" defer type='module'> </script>
   
 </head>
 <body>
@@ -109,7 +111,6 @@
       <button id="email-btn">Sign-Up</button>
     </div>
   </footer>
-  <script src="js/app.js"></script>
   <script src="js/bookshelf.js"></script>
   <script src="js/ls.js"></script>
 
