--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 
   </section>
 
-  <section id="table-section">
-    <h2 id = "wyos">Write your own Story</h2>
-    <table id="bookshelf"></table>
+  <h2 id = "wyos">Write your own Story</h2>
 
 
     <!-- STORY FORM -->
@@ -89,7 +87,10 @@
     </form>
   </div>
   </section>  
-
+  <section id="tableSection">
+ 
+    <table id="bookshelf"></table>
+  </section>
   <footer>
     <div>
       <p> Contact Us for More Updates</p>
