made both forms talk to each other and local storage function

--- a/index.html
+++ b/index.html
@@ -31,59 +31,9 @@
       <canvas id="my-image" width="350px" height="350px"></canvas>
     </div>
   </section>
-  <section id="storyDisplay">
-
-  </section>
-
-  <section id="h2-section">
-    <h2 id="wyos">Write your own Story</h2>
-  </section>
-
-  <!-- STORY FORM -->
-  <div id="selbar">
-    <form id="storyForm">
-      <fieldset>
-
-        <div id="storyNameForm">
-          <label id="newStoryDiv">Name Your Story</label><br>
-          <label class="newStory">Story Name:</label>
-          <input class="newStory" type="text" name="storyName">
-        </div>
-
-        <div id="storyNoun1">
-          <label id="noun1Div"></label><br>
-          <label class="noun1">What is something you really dislike?</label>
-          <input class="noun1" type="text" name="noun1">
-        </div>
-
-        <div id="storyAdj1">
-          <label id="adj1Div">Use a 1 word to describe your city.</label><br>
-          <label class="adj1">Adjective: </label>
-          <input class="adj1" type="text" name="adj1">
-        </div>
-
-        <div id="storyName1">
-          <label id="propDiv1">Who's someone you idolize?</label><br>
-          <label class="name1">Name of Person:</label>
-          <input class="name1" type="text" name="name1">
-        </div>
 
 
-
-        <div>
-          <select name="color" id="color">
-            <option value="default">Select a Color</option>
-            <option value="red">Red</option>
-            <option value="blue">Green</option>
-            <option value="green">Blue</option> 
-          </select>
-
-      <li class="button">
-        <button id="=storysubmit" type="submit">Submit</button>
-      </li>
-    </fieldset>
-  </form>
-</div>
+  
 
   <footer>
     <div>
@@ -106,8 +56,8 @@
       <button id="email-btn">Sign-Up</button>
     </div>
   </footer>
-  <script src="js/bookshelf.js"></script>
-  <script src="js/ls.js"></script>
+  <script src="js/shelf.js"></script>
+  <!-- <script src="js/ls.js"></script> -->
 
 </body>
 
