functioning bookshelf, needs links to be updated after code review

--- a/profile.html
+++ b/profile.html
@@ -65,7 +65,7 @@
   <section id="h2-section">
     <h2 id="wyos">Write your own Story</h2>
   </section>
-
+  <a href="./index.html">Home TESTING</a>
   <!-- STORY FORM -->
   <section id="storyDisplay">
     </section>
