--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css">
 
-  <script src="js/app.js" defer type='module'> </script>
-
-</head>
+  </head>
 
 <body>
   <header>
@@ -32,7 +30,11 @@
     </div>
   </section>
 
+  <a id = storyLink href="./profile.html">Write your Own Story</a>
 
+  <section id="table-section">
+    <table id="shelf"></table>
+  </section>
   
 
   <footer>
@@ -56,7 +58,7 @@
       <button id="email-btn">Sign-Up</button>
     </div>
   </footer>
-  <script src="js/shelf.js"></script>
+  <script src="js/bookshelf.js"></script>
   <!-- <script src="js/ls.js"></script> -->
 
 </body>
