updated bookshelf css and added links for liveserver dem as needed

--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 
   <section class="img-container">
     <div id="canvas-div">
-      <canvas id="my-image" width="350px" height="350px"></canvas>
+      <img id ="my-image" src="/img/bookspine.jpg" width="500px" height="350px"></img>
     </div>
   </section>
 
-  <a id = storyLink href="./profile.html">Write your Own Story</a>
+  <a id="storyLink" href="./profile.html"><h2>
+    Write your Own Story
+  </h2>
+</a>
 
   <section id="table-section">
     <table id="shelf"></table>
