--- a/profile.html
+++ b/profile.html
@@ -65,7 +65,7 @@
   <section id="h2-section">
     <h2 id="wyos">Write your own Story</h2>
   </section>
-  <a href="./index.html">Home TESTING</a>
+ 
   <!-- STORY FORM -->
   <section id="storyDisplay">
     </section>
@@ -115,6 +115,10 @@
   </form>
 
 </div>
+
+<a href="./index.html"><h2 id="homeFromProfile">
+Bookshelf
+</h2></a>
 </select>
   <footer>
     <div>
