fixed background bug

--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
 <body>
 <header>
   <div id="logo">
-    <img src="img/storeyteller.jpg" width="150px" height="100px">
+    <img src="./img/storeyteller.jpg" width="150px" height="100px">
     <h1 class="styling">"Story Not Story"</h1>
   </div>
   <nav>
