--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
   <nav>
     <a href="https://group-c-201d90.github.io/awesome-project/">Home</a>
     <a href="https://group-c-201d90.github.io/awesome-project/profile.html">Story</a>
-    <a href="/bio.html">About Us</a>
+    <a href="https://group-c-201d90.github.io/awesome-project//bio.html">About Us</a>
   </nav>
 </header>
   <section>
