--- a/profile.html
+++ b/profile.html
@@ -15,9 +15,13 @@
     <h1 class="styling">"Story Not Story"</h1>
   </div>
   <nav>
-    <a href="https://group-c-201d90.github.io/awesome-project/">Home</a>
+    <!-- <a href="https://group-c-201d90.github.io/awesome-project/">Home</a>
     <a href="https://group-c-201d90.github.io/awesome-project/profile.html">Story</a>
-    <a href="https://group-c-201d90.github.io/awesome-project/bio.html">About Us</a>
+    <a href="https://group-c-201d90.github.io/awesome-project/bio.html">About Us</a> -->
+    
+    <a href="index.html">Home</a>
+    <a href="profile.html">Story</a>
+    <a href="bio.html">About Us</a>
   </nav>
 </header>
   <section>
