edit canvas-div to img-div, changed book size in index.html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   </header>
 
   <section class="img-container">
-    <div id="canvas-div">
-      <img id ="my-image" src="/img/bookspine.jpg" width="500px" height="350px"></img>
+    <div id="img-div">
+      <img id ="my-image" src="/img/bookspine.jpg" width="750px" height="350px"></img>
     </div>
   </section>
 
