removed ./ on images

--- a/profile.html
+++ b/profile.html
@@ -4,24 +4,21 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>User Profile</title>
 </head>
 <body>
 <header>
   <div id="logo">
-    <img src="./img/storeyteller.jpg" width="150px" height="100px">
+    <img src="img/storeyteller.jpg" width="150px" height="100px">
     <h1 class="styling">"Story Not Story"</h1>
   </div>
   <nav>
-    <!-- <a href="https://group-c-201d90.github.io/awesome-project/">Home</a>
+    <a href="https://group-c-201d90.github.io/awesome-project/">Home</a>
     <a href="https://group-c-201d90.github.io/awesome-project/profile.html">Story</a>
-    <a href="https://group-c-201d90.github.io/awesome-project/bio.html">About Us</a> -->
+    <a href="https://group-c-201d90.github.io/awesome-project/bio.html">About Us</a>
     
-    <a href="index.html">Home</a>
-    <a href="profile.html">Story</a>
-    <a href="bio.html">About Us</a>
   </nav>
 </header>
   <section>
@@ -120,9 +117,9 @@
 
 </div>
 
-<a href="./index.html"><h2 id="homeFromProfile">
-Bookshelf
-</h2></a>
+<a href="https://group-c-201d90.github.io/awesome-project/"><h2 id="homeFromProfile">
+  Bookshelf
+  </h2></a>
 </select>
   <footer>
     <div>
@@ -145,7 +142,6 @@ Bookshelf
       <button id="email-btn">Sign-Up</button>
     </div>
   </footer>
-  <script src="./js/app.js"></script>
-  <!-- <script src="./js/ls.js"></script> -->
+  <script src="js/app.js"></script>
 </body>
 </html>
